@@ -74,14 +74,14 @@ func ParseRSS(r io.Reader) (*Feed, error) {
 		SiteURL: srcfeed.Link,
 	}
 	for _, srcitem := range srcfeed.Items {
-		podcastURL := ""
+		mediaLinks := srcitem.mediaLinks()
 		for _, e := range srcitem.Enclosures {
 			if strings.HasPrefix(e.Type, "audio/") {
-				podcastURL = e.URL
-
+				podcastURL := e.URL
 				if srcitem.OrigEnclosureLink != "" && strings.Contains(podcastURL, path.Base(srcitem.OrigEnclosureLink)) {
 					podcastURL = srcitem.OrigEnclosureLink
 				}
+				mediaLinks = append(mediaLinks, MediaLink{URL: podcastURL, Type: "audio"})
 				break
 			}
 		}
@@ -92,13 +92,12 @@ func ParseRSS(r io.Reader) (*Feed, error) {
 		}
 
 		dstfeed.Items = append(dstfeed.Items, Item{
-			GUID:     firstNonEmpty(srcitem.GUID.GUID, srcitem.Link),
-			Date:     dateParse(firstNonEmpty(srcitem.DublinCoreDate, srcitem.PubDate)),
-			URL:      firstNonEmpty(srcitem.OrigLink, srcitem.Link, permalink),
-			Title:    srcitem.Title,
-			Content:  firstNonEmpty(srcitem.ContentEncoded, srcitem.Description),
-			AudioURL: podcastURL,
-			ImageURL: srcitem.firstMediaThumbnail(),
+			GUID:       firstNonEmpty(srcitem.GUID.GUID, srcitem.Link),
+			Date:       dateParse(firstNonEmpty(srcitem.DublinCoreDate, srcitem.PubDate)),
+			URL:        firstNonEmpty(srcitem.OrigLink, srcitem.Link, permalink),
+			Title:      srcitem.Title,
+			Content:    firstNonEmpty(srcitem.ContentEncoded, srcitem.Description, srcitem.firstMediaDescription()),
+			MediaLinks: mediaLinks,
 		})
 	}
 	return dstfeed, nil
