@@ -329,6 +329,9 @@ func (s *Server) handleItem(c *router.Context) {
 		}
 
 		item.Content = sanitizer.Sanitize(item.Link, item.Content)
+		for i, link := range item.MediaLinks {
+			item.MediaLinks[i].Description = sanitizer.Sanitize(item.Link, link.Description)
+		}
 
 		c.JSON(http.StatusOK, item)
 	} else if c.Req.Method == "PUT" {
