@@ -3,6 +3,7 @@
 - (new) Fever API support (thanks to @icefed)
 - (new) editable feed link (thanks to @adaszko)
 - (new) switch to feed by clicking the title in the article page (thanks to @tarasglek for suggestion)
+- (new) support multiple media links
 - (fix) duplicate articles caused by the same feed addition (thanks to @adaszko)
 - (fix) relative article links (thanks to @adazsko for the report)
 - (fix) atom article links stored in id element (thanks to @adazsko for the report)
